--- a/libs/blkid/TODO
+++ b/libs/blkid/TODO
@@ -3,6 +3,10 @@
 
  - add hex-encoding from libudev
 
+ - do we really need to depend on libuuid? Maybe the default should be
+   use in-tree code rather and link against libuuid -- especially when we
+   need it for uuid_unparse() only.
+
  - add blkid -o | --format=full|value|udev
 
  - consolidate "getsize" stuff (see getsize.c and lib/blkdev.c)
