docs: update AUTHORS file
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -57,6 +57,7 @@ CONTRIBUTORS:
       Gabor Kelemen <kelemeng@gnome.hu>
       Gabriel Barazer <gabriel@oxeva.fr>
       Gabriel Burt <gburt@novell.com>
+      Guan Xin <guanx.bac@gmail.com>
       Hamish Coleman <hamish@zot.org>
       H. Peter Anvin <hpa@zytor.com>
       Imre Kaloz <kaloz@openwrt.org>
@@ -81,8 +82,10 @@ CONTRIBUTORS:
       Mark McLoughlin <markmc@redhat.com>
       Martin Schlemmer <azarah@gentoo.org>
       Martin Schulze <joey@infodrom.org>
+      Martin Steigerwald <ms@teamix.de>
       Masatake YAMATO <jet@gyve.org>
       Matthias Koenig <mkoenig@suse.de>
+      maximilian attems <max@stro.at>
       Maxim V. Dziumanenko <mvd@mylinux.com.ua>
       Meelis Roos <mroos@linux.ee>
       Michael Piefel <piefel@informatik.hu-berlin.de>
@@ -91,6 +94,7 @@ CONTRIBUTORS:
       Mikel Olasagasti <hey_neken@mundurat.net>
       Miklos Szeredi <mszeredi@suse.cz>
       Moritz Muehlenhoff <jmm@inutil.org>
+      Nicolas Provost <nprovost@quadriv.com>
       Nilgün Belma Bugüner <nilgun@buguner.name.tr>
       Norbert Buchmuller <norbi@nix.hu>
       Oliver Falk <oliver@linux-kernel.at>
@@ -98,6 +102,7 @@ CONTRIBUTORS:
       Pascal Terjan <pterjan@cmoi.fasmz.org>
       Paulius Zaleckas <paulius.zaleckas@teltonika.lt>
       Pavel Maryanov <acid_jack@ukr.net>
+      Pedro Ribeiro <p.m42.ribeiro@gmail.com>
       Peter Breitenlohner <peb@mppmu.mpg.de>
       Petr Pisar <petr.pisar@atlas.cz>
       Phan Vinh Thinh <teppi82@gmail.com>
