blkid: add -p and low-probe mode to blkid binary
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/TODO
+++ b/libs/blkid/TODO
@@ -1,13 +1,11 @@
 
- - add blkid --low-probe
-
  - add hex-encoding from libudev
 
  - do we really need to depend on libuuid? Maybe the default should be
    use in-tree code rather and link against libuuid -- especially when we
    need it for uuid_unparse() only.
 
- - add blkid -o | --format=full|value|udev
+ - add "blkid -f udev" (vol_id compatible output format)
 
  - consolidate "getsize" stuff (see getsize.c and lib/blkdev.c)
 
