--- a/schedutils/ionice.1
+++ b/schedutils/ionice.1
@@ -10,7 +10,7 @@ This program sets or gets the io scheduling class and priority for a program.
 If no arguments or just \fI-p\fR is given, \fIionice\fR will query the current
 io scheduling class and priority for that process.
 
-As of this writing, a process can be in one of four scheduling classes:
+As of this writing, a process can be in one of three scheduling classes:
 
 .IP "\fBIdle\fR"
 A program running with idle io priority will only get disk time when no other
@@ -20,11 +20,17 @@ class does not take a priority argument. Presently, this scheduling class
 is permitted for an ordinary user (since kernel 2.6.25).
 
 .IP "\fBBest effort\fP"
-This is the effective scheduling class for any process that hasn't asked for
+This is the effective scheduling class for any process that has not asked for
 a specific io priority.
 This class takes a priority argument from \fI0-7\fR, with lower
 number being higher priority. Programs running at the same best effort
 priority are served in a round-robin fashion.
+
+The processes that has not asked for io priority formally use "\fBnone\fP" as a
+scheduling class, but the io scheduler will treat such processes as if they
+were in the best effort class. The priority within the best effort class will
+be dynamically derived from the cpu nice level of the process: io_priority =
+(cpu_nice + 20) / 5.
 
 .IP "\fBReal time\fR"
 The RT scheduling class is given first access to the disk, regardless of
@@ -33,14 +39,6 @@ some care, as it can starve other processes. As with the best effort class,
 8 priority levels are defined denoting how big a time slice a given process
 will receive on each scheduling window. This scheduling class is not
 permitted for an ordinary (i.e., non-root) user.
-
-.IP "\fBNone\fP"
-A process that that hasn't asked for a specific io priority will formally be
-in this class. The io scheduler will treat a process that is in this class as
-if it were in the best effort class. The priority within the best effort
-class will be dynamically derived from the cpu nice level of the process:
-io_priority = (cpu_nice + 20) / 5
-
 
 .SH OPTIONS
 .LP
