docs: update AUTHORS file
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -61,6 +61,7 @@ CONTRIBUTORS:
       Hamish Coleman <hamish@zot.org>
       H. Peter Anvin <hpa@zytor.com>
       Imre Kaloz <kaloz@openwrt.org>
+      Jakob Unterwurzacher <jakobunt@gmail.com>
       James Youngman <jay@gnu.org>
       Jason Vas Dias <jvdias@redhat.com>
       Jim Meyering <jim@meyering.net>
@@ -113,6 +114,7 @@ CONTRIBUTORS:
       Robert Millan <rmh@aybabtu.com>
       Rodrigo Stulzer Lopes <rodrigo@conectiva.com.br>
       Samuel Thibault <samuel.thibault@ens-lyon.org>
+      Sam Varshavchik <mrsam@courier-mta.com>
       Santiago Vila Doncel <sanvila@unex.es>
       Sascha Sommer <ssommer@suse.de>
       Shachar Shemesh <shachar@debian.org>
