--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+util-linux-ng 2.14.2-rc2: Jan 22 2009
+* see docs/v2.14.2-ReleaseNotes or complete changelog at
+  ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/v2.14/v2.14.2-rc2-ChangeLog
+
 util-linux-ng 2.14.2-rc1: Dec 22 2008
 * see docs/v2.14.2-ReleaseNotes or complete changelog at
   ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/v2.14/v2.14.2-rc1-ChangeLog
