--- a/sys-utils/rtcwake.8
+++ b/sys-utils/rtcwake.8
@@ -74,8 +74,8 @@ is the time in seconds since 1970-01-01, 00:00 UTC. Use the
 .TP
 \fB-m\fP \fImode\fP | \fB--mode\fP \fImode\fP
 Use standby state \fImode\fP. Valid values are \fIstandby\fP,
-\fImem\fP, \fIdisk\fP and \fIon\fP (no suspend). The default is
-\fIstandby\fP.
+\fImem\fP, \fIdisk\fP, \fIno\fP (no suspend) and \fIon\fP (for debugging).
+The default is \fIstandby\fP.
 .SH NOTES
 Some PC systems can't currently exit sleep states such as \fImem\fP
 using only the kernel code accessed by this driver.
