namei: add --vertical option
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/misc-utils/namei.1
+++ b/misc-utils/namei.1
@@ -46,6 +46,8 @@ Show the mode bits of each file type in the style of ls(1),
 for example 'rwxr-xr-x'.
 .IP "\fB\-n, \-\-nosymlinks\fP"
 Don't follow symlinks.
+.IP "\fB\-v, \-\-vertical\fP"
+Vertical align of modes and owners.
 .SH AUTHOR
 The original
 .B namei
