--- a/libs/blkid/TODO
+++ b/libs/blkid/TODO
@@ -11,24 +11,11 @@
 
  - consolidate "getsize" stuff (see getsize.c and lib/blkdev.c)
 
- - add a new flag to keep information that FS is ready to share the device with
-   any other FS (iso9960, udf, ...)
-
- - create a new function
-
-	blkid_do_safeprobe()
-
-   that scan for all filesystems and check for collisions (fat vs. swap)
-
  - rebase to the latest util-linux-ng
-
- - add regression tests:
-	- add to tests/input/blkid/ FS images
-	- create ts-blkid-fs to tests FS detection
 
  - create a new simple API for LABEL/UUID evaluation:
 
-	blkid_eval_spec()
+	blkid_eval_label()
 	blkid_eval_uuid()
 	blkid_eval_spec()	(spec: <NAME>=<value>)
 
