--- a/schedutils/ionice.1
+++ b/schedutils/ionice.1
@@ -27,8 +27,8 @@ This class takes a priority argument from \fI0-7\fR, with lower
 number being higher priority. Programs running at the same best effort
 priority are served in a round-robin fashion.
 
-The processes that has not asked for io priority formally use "\fBnone\fP" as a
-scheduling class, but the io scheduler will treat such processes as if they
+A process that has not asked for an io priority formally uses "\fBnone\fP" as
+scheduling class, but the io scheduler will treat such processes as if it
 were in the best effort class. The priority within the best effort class will
 be dynamically derived from the cpu nice level of the process: io_priority =
 (cpu_nice + 20) / 5.
