blkid: add support for /etc/blkid.conf file
We need a config file for the library. Now the library supports
config options:

	EVALUATION=<method>[,<method>]

	SEND_UEVENT=<yes|not>

	CACHE_FILE=<path>

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/TODO
+++ b/libs/blkid/TODO
@@ -2,6 +2,9 @@
  TODO
  ----
 
+ - (?) we need to ignore cache and config files when the files are writable
+   for non-root users and the library is linked with suid programs
+
  - add -<BE|LE> suffix to test images for native-endian filesystems (e.g. swap)
    and add support for such functionality to tests/ts/blkid/low-probe
 
