--- a/libs/blkid/libblkid.3
+++ b/libs/blkid/libblkid.3
@@ -5,7 +5,7 @@
 .\" This file may be copied under the terms of the GNU Public License.
 .\"
 .\" Created  Wed Sep 14 12:02:12 2001, Andreas Dilger
-.TH LIBBLKID 3 "@E2FSPROGS_MONTH@ @E2FSPROGS_YEAR@" "E2fsprogs version @E2FSPROGS_VERSION@"
+.TH LIBBLKID 3 "February 2009" "Linux" "MAINTENANCE COMMANDS""
 .SH NAME
 libblkid \- block device identification library
 .SH SYNOPSIS
@@ -55,8 +55,8 @@ from Ted Ts'o.  The library was subsequently heavily modified by Ted Ts'o.
 Caches data extracted from each recognized block device.
 .SH AVAILABILITY
 .B libblkid
-is part of the e2fsprogs package since version 1.33 and is available from
-http://e2fsprogs.sourceforge.net.
+is part of the util-linux-ng package since version 2.15 and is available from
+ftp://ftp.kernel.org/pub/linux/utils/util-linux-ng/.
 .SH COPYING
 .B libblkid
 is available under the terms of the GNU Library General Public License (LGPL),
@@ -78,3 +78,4 @@ http://www.gnu.org/licenses/licenses.html#LGPL
 .UE
 .SH "SEE ALSO"
 .BR blkid (8)
+.BR findfs (8)
