blkid: add Christoph's note about libdisk to TODO
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/libs/blkid/TODO
+++ b/libs/blkid/TODO
@@ -37,3 +37,13 @@
    need it for uuid_unparse() only.
 
  - consolidate "getsize" stuff (see getsize.c and lib/blkdev.c)
+
+ - cleanup __attribute__ usage
+
+ - add stripe size / alignment retrival support to libbkid for use
+   with mkfs.  This would allow to deprecate libdisk from xfsprogs (1)
+   in favour of a common libblkid.
+
+   [ -- Christoph Hellwig, 16 Feb 2009 ]
+   (1) http://git.kernel.org/?p=fs/xfs/xfsprogs-dev.git;a=tree;f=libdisk;
+
