losetup: detach more devices by "-d <loop> [<loop> ..]"
This patch allows to detach more devices by "losetup -d",
for example:

  # losetup -a
  /dev/loop0: [0804]:9955739 (/home/images/ary0.img)
  /dev/loop1: [0804]:9955740 (/home/images/ary1.img)
  /dev/loop2: [0804]:9955745 (/home/images/ary2.img)

  # losetup -d /dev/loop0 /dev/loop1 /dev/loop2

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/losetup.8
+++ b/mount/losetup.8
@@ -19,6 +19,8 @@ Delete loop:
 .in +5
 .B "losetup \-d"
 .I loop_device
+.RB [ \fIloop_device\fP
+.RB ...]
 .sp
 .in -5
 Print name of first unused loop device:
@@ -71,7 +73,7 @@ and finds the module that knows how to perform that encryption.
 .IP "\fB\-a, \-\-all\fP"
 show status of all loop devices
 .IP "\fB\-d, \-\-detach\fP"
-detach the file or device associated with the specified loop device
+detach the file or device associated with the specified loop device(s)
 .IP "\fB\-e, \-E, \-\-encryption \fIencryption_type\fP"
 enable data encryption with specified name or number
 .IP "\fB\-f, \-\-find\fP"
