swapon: add -f/--fixpgsz option
The patch:

	commit 3399a218f4eff4016a22044e7c416521bc37c53c
	Author: Matthias Koenig <mkoenig@suse.de>
	Date:   Thu Nov 27 12:32:56 2008 +0100
	swapon: add swap format detection and pagesize check

introduced a new feature. This feature should be optional (disabled by
default) to keep happy people who use swap-space bad blocks or
nonstandard swap-space size.

CC: Hugh Dickins <hugh@veritas.com>
CC: Olaf Hering <olh@suse.de>
CC: Matthias Koenig <mkoenig@suse.de>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/swapon.8
+++ b/mount/swapon.8
@@ -54,6 +54,7 @@ Enable/disable:
 .br
 .in +5
 .B swapon
+.RB [ \-f ]
 .RB [ \-p
 .IR priority ]
 .RB [ \-v ]
@@ -73,6 +74,7 @@ Enable/disable all:
 .in +5
 .B swapon \-a
 .RB [ \-e ]
+.RB [ \-f ]
 .RB [ \-v ]
 .br
 .B swapoff \-a
@@ -115,6 +117,12 @@ Devices that are already being used as swap are silently skipped.
 .TP 
 .B "\-e, \-\-ifexists"
 Silently skip devices that do not exist.
+.TP
+.B "\-f, \-\-fixpgsz"
+Reinitialize (exec /sbin/mkswap) the swap space when the page size mismatch between
+the current running kernel and swap space is detected. Note that in such a case
+.B mkswap(2)
+initializes the whole device and does not check for bad blocks.
 .TP
 .B \-h, \-\-help
 Provide help.
