login: remove "switching users" nonsense from man page
For more details see the BUGS section in the man page.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/login-utils/login.1
+++ b/login-utils/login.1
@@ -13,9 +13,7 @@ login \- sign on
 .BR "login \-f " name
 .SH DESCRIPTION
 .B login
-is used when signing onto a system.  It can also be used to switch from one
-user to another at any time (most modern shells have support for this
-feature built into them, however).
+is used when signing onto a system.
 
 If an argument is not given,
 .B login
